# EdgeDetectionViewer

./: README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rnd/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/rnd/: MainActivity.kt
app/src/main/java/com/example/rnd/cv/: NativeBridge.kt
app/src/main/java/com/example/rnd/gl/: MyGLRenderer.kt
app/src/test/java/com/example/rnd/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
